chore: minors updates to the docs and code to use Tailwind  - 1a5cd076a948863c88ee186d3ede123324a5a5cf by Paolo Tesser <p.tesser921@gmail.com>   - 657f9505c8a4efc49d8a423cae124f6fdebd67db by Paolo Tesser <p.tesser921@gmail.com>   - 82b0cc3b2ce15ba16266c98eb9c1ddfa0a07a46e by Paolo Tesser <p.tesser921@gmail.com>   - 34e77e78c260b52d28c189a9b139530b2dfd6b6a by Paolo Tesser <p.tesser921@gmail.com>   - ac3ba5013398434fb68b659669363d778eaf12dd by Alessandro Martelli <97023655+alemartelli@users.noreply.github.com>   - 60f79426fab6b24259d0a80c07676e256fbdc888 by Alessandro Martelli <97023655+alemartelli@users.noreply.github.com>   - 583bb71aab2f4d7243d649c2bbc077e166102593 by Paolo Tesser <p.tesser921@gmail.com>   - 71c023f764c2a6580b9a73780906b7e70fd9e9c0 by Federico <federicogerardi94@gmail.com>   - e99d3215c9a8e6cb5ef67197e117efe0a91ad0d0 by Paolo Tesser <p.tesser921@gmail.com>   - 7e1c27740b53c82e93ce41a002d9cfb6aeec0608 by flowin.space <d.turtulici@geckosoft.it>   - cff8ec8e738c2017ab3db5cd5835080b5a11c593 by flowin.space <d.turtulici@geckosoft.it>   - 3083a9b6411c5c708cdf4de0d7cca35dc40f6ecf by Paolo Tesser <p.tesser921@gmail.com>   - 50d4578f62dd222f6496442d5d59f64381325839 by Paolo Tesser <p.tesser921@gmail.com>   - df00cb9ce16a3267081808a1cceb5b831daf014b by Paolo Tesser <p.tesser921@gmail.com>
GitOrigin-RevId: 1a5cd076a948863c88ee186d3ede123324a5a5cf

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@traent/ngx-components",
-  "version": "0.0.10",
+  "version": "0.1.4",
   "author": {
     "name": "Traent S.r.l."
   },
@@ -23,5 +23,10 @@
   },
   "dependencies": {
     "tslib": "^2.2.0"
+  },
+  "exports": {
+    "./assets/css/styles.min.css": {
+      "style": "./assets/css/styles.min.css"
+    }
   }
 }
